--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Tinder auto messenger",
     "version": "0.0.0.2",
     "description": "Automatically sends messages on Tinder",
-    "permissions": ["storage", "activeTab", "scripting", "sidePanel", "tabs", "webNavigation", "storage"],
+    "permissions": ["storage", "activeTab", "scripting", "sidePanel", "tabs", "webNavigation"],
     "background": {
         "service_worker": "background.js"
     },
